src/objects/ADB_JWT_Config__mdt.object
<CustomObject>
    <description>Keep the JWT token generation information</description>
    <fields>
        <fullName>Is_Mock_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Mock Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JWT_Key__c</fullName>
        <label>JWT Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JWT_Secret__c</fullName>
        <label>JWT Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ADB JWT Config</label>
    <pluralLabel>ADB JWT Configs</pluralLabel>
</CustomObject>